新增内容：大对象垃圾回收机制